--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,168 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: oklch(0.9761 0 0);
+  --foreground: oklch(0.3211 0 0);
+  --card: oklch(1.0000 0 0);
+  --card-foreground: oklch(0.3211 0 0);
+  --popover: oklch(1.0000 0 0);
+  --popover-foreground: oklch(0.3211 0 0);
+  --primary: oklch(0.6731 0.1624 144.2083);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.6991 0.1570 238.9942);
+  --secondary-foreground: oklch(1.0000 0 0);
+  --muted: oklch(0.7984 0 0);
+  --muted-foreground: oklch(1.0000 0 0);
+  --accent: oklch(0.7703 0.1741 64.0539);
+  --accent-foreground: oklch(1.0000 0 0);
+  --destructive: oklch(0.6427 0.2153 28.8057);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.8975 0 0);
+  --input: oklch(1.0000 0 0);
+  --ring: oklch(0.6731 0.1624 144.2083);
+  --chart-1: oklch(0.6731 0.1624 144.2083);
+  --chart-2: oklch(0.6991 0.1570 238.9942);
+  --chart-3: oklch(0.7703 0.1741 64.0539);
+  --chart-4: oklch(0.6427 0.2153 28.8057);
+  --chart-5: oklch(0.7536 0.1626 130.5022);
+  --sidebar: oklch(1.0000 0 0);
+  --sidebar-foreground: oklch(0.3211 0 0);
+  --sidebar-primary: oklch(0.6731 0.1624 144.2083);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.7703 0.1741 64.0539);
+  --sidebar-accent-foreground: oklch(1.0000 0 0);
+  --sidebar-border: oklch(0.8975 0 0);
+  --sidebar-ring: oklch(0.6731 0.1624 144.2083);
+  --font-sans: Inter;
+  --font-serif: Merriweather;
+  --font-mono: Monaco;
+  --radius: 8px;
+  --shadow-2xs: 0px 2px 4px 0px hsl(0 0% 0% / 0.10);
+  --shadow-xs: 0px 2px 4px 0px hsl(0 0% 0% / 0.10);
+  --shadow-sm: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 1px 2px -1px hsl(0 0% 0% / 0.20);
+  --shadow: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 1px 2px -1px hsl(0 0% 0% / 0.20);
+  --shadow-md: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 2px 4px -1px hsl(0 0% 0% / 0.20);
+  --shadow-lg: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 4px 6px -1px hsl(0 0% 0% / 0.20);
+  --shadow-xl: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 8px 10px -1px hsl(0 0% 0% / 0.20);
+  --shadow-2xl: 0px 2px 4px 0px hsl(0 0% 0% / 0.50);
+  --tracking-normal: 0.2px;
+}
+
+.dark {
+  --background: oklch(0.3211 0 0);
+  --foreground: oklch(1.0000 0 0);
+  --card: oklch(0.3867 0 0);
+  --card-foreground: oklch(1.0000 0 0);
+  --popover: oklch(0.3867 0 0);
+  --popover-foreground: oklch(1.0000 0 0);
+  --primary: oklch(0.6731 0.1624 144.2083);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.6991 0.1570 238.9942);
+  --secondary-foreground: oklch(1.0000 0 0);
+  --muted: oklch(0.5103 0 0);
+  --muted-foreground: oklch(1.0000 0 0);
+  --accent: oklch(0.7703 0.1741 64.0539);
+  --accent-foreground: oklch(1.0000 0 0);
+  --destructive: oklch(0.6427 0.2153 28.8057);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.4495 0 0);
+  --input: oklch(0.3867 0 0);
+  --ring: oklch(0.6731 0.1624 144.2083);
+  --chart-1: oklch(0.6731 0.1624 144.2083);
+  --chart-2: oklch(0.6991 0.1570 238.9942);
+  --chart-3: oklch(0.7703 0.1741 64.0539);
+  --chart-4: oklch(0.6427 0.2153 28.8057);
+  --chart-5: oklch(0.7536 0.1626 130.5022);
+  --sidebar: oklch(0.3867 0 0);
+  --sidebar-foreground: oklch(1.0000 0 0);
+  --sidebar-primary: oklch(0.6731 0.1624 144.2083);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.7703 0.1741 64.0539);
+  --sidebar-accent-foreground: oklch(1.0000 0 0);
+  --sidebar-border: oklch(0.4495 0 0);
+  --sidebar-ring: oklch(0.6731 0.1624 144.2083);
+  --font-sans: Inter;
+  --font-serif: Merriweather;
+  --font-mono: Monaco;
+  --radius: 8px;
+  --shadow-2xs: 0px 2px 4px 0px hsl(0 0% 0% / 0.10);
+  --shadow-xs: 0px 2px 4px 0px hsl(0 0% 0% / 0.10);
+  --shadow-sm: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 1px 2px -1px hsl(0 0% 0% / 0.20);
+  --shadow: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 1px 2px -1px hsl(0 0% 0% / 0.20);
+  --shadow-md: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 2px 4px -1px hsl(0 0% 0% / 0.20);
+  --shadow-lg: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 4px 6px -1px hsl(0 0% 0% / 0.20);
+  --shadow-xl: 0px 2px 4px 0px hsl(0 0% 0% / 0.20), 0px 8px 10px -1px hsl(0 0% 0% / 0.20);
+  --shadow-2xl: 0px 2px 4px 0px hsl(0 0% 0% / 0.50);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-normal: var(--tracking-normal);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply bg-background text-foreground;
+  }
 }
